--- a/src/app/header/desktopheader/desktopheader.component.html
+++ b/src/app/header/desktopheader/desktopheader.component.html
@@ -20,11 +20,12 @@
             <a id="button-animated" dropdownToggle class="btn-cus-mobile-menu"><i class="fa fa-bars" style="color: #002447;font-size: 30px;"></i></a>
             <ul id="dropdown-animated" *dropdownMenu class="dropdown-menu mobile-dropdown-menu"
                 role="menu" aria-labelledby="button-animated">
-                <li><a class="dropdown-item"routerLink="/user/transaction.html"><div><i class="fa fa-list" aria-hidden="true"></i></div>Transactions</a></li>
-                <li><a class="dropdown-item"routerLink="/user/wallet.html"><div><i class="fa fa-inr" aria-hidden="true"></i></div>Wallet</a></li>
-                <li><a class="dropdown-item" routerLink="/user/profile.html"><div><i class="fa fa-user" aria-hidden="true"></i></div>Profile</a></li>  
-                <li><a class="dropdown-item" routerLink="/user/membershipUpdate.html"><div><i class="fa fa-edit" aria-hidden="true"></i></div>Update MemberShip</a></li>                
-                <li><a class="dropdown-item" (click)="logout()"><div><i class="fa fa-sign-out" aria-hidden="true"></i></div>Logout</a></li>
+              <li><a class="dropdown-item" routerLink="/user/transaction.html"><div><i class="fa fa-list" aria-hidden="true"></i></div>Transactions</a></li>
+              <li><a class="dropdown-item" routerLink="/user/wallet.html"><div><i class="fa fa-inr" aria-hidden="true"></i></div>Wallet</a></li>
+              <li><a class="dropdown-item" routerLink="/user/profile.html"><div><i class="fa fa-user" aria-hidden="true"></i></div>Profile</a></li>
+              <li><a class="dropdown-item" routerLink="/user/membershipUpdate.html"><div><i class="fa fa-edit" aria-hidden="true"></i></div>Update MemberShip</a></li>
+              <li><a class="dropdown-item" routerLink="/user/wallettowalletComponent.html"><div><i class="fa fa-money" aria-hidden="true"></i></div>WalletToWallet</a></li>
+              <li><a class="dropdown-item" (click)="logout()"><div><i class="fa fa-sign-out" aria-hidden="true"></i></div>Logout</a></li>
             </ul>
           </div>
         <ul>
