--- a/src/app/content/reports/reports.component.html
+++ b/src/app/content/reports/reports.component.html
@@ -4,18 +4,22 @@
     <a class="navbar-brand" routerLink="/" ><i class="fa fa-home" ></i></a>
   
     <!-- Links -->
-    <ul class="navbar-nav" >
+    <ul class="navbar-nav">
       <li class="nav-item" routerLinkActive="active-link">
-        <a class="nav-link" routerLink="wallet.html" ><i aria-hidden="true" class="fa fa-inr"></i> Wallet</a>
+        <a class="nav-link" routerLink="wallet.html"><i aria-hidden="true" class="fa fa-inr"></i> Wallet</a>
       </li>
       <li class="nav-item" routerLinkActive="active-link">
-        <a class="nav-link"  routerLink="transaction.html" ><i aria-hidden="true" class="fa fa-list"></i> Transactions</a>
+        <a class="nav-link" routerLink="transaction.html"><i aria-hidden="true" class="fa fa-list"></i> Transactions</a>
       </li>
       <li class="nav-item" routerLinkActive="active-link">
-          <a class="nav-link"  routerLink="profile.html" ><i aria-hidden="true" class="fa fa-user"></i> Profile</a>
-        </li>
+        <a class="nav-link" routerLink="profile.html"><i aria-hidden="true" class="fa fa-user"></i> Profile</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active-link">
+      <a class="nav-link" routerLink="wallettowalletComponent.html"><i class="fa fa-money" aria-hidden="true"></i>WalletToWallet</a>
+
+      </li>
       <!-- Dropdown -->
-      
+
     </ul>
   </nav>
 </div>
