--- a/src/app/content/advertisement/advertisement.component.html
+++ b/src/app/content/advertisement/advertisement.component.html
@@ -85,8 +85,8 @@
         </div>
         
         <div class="scroll-content text-center">
-          <!--<p  class="text-danger">{{Msg}}</p>-->
-          <p  class="text-info">{{Msg}}</p>
+          <p  class="text-danger">{{Msg}}</p>
+          <!--<p  class="text-info">{{Msg}}</p>-->
 
           <button type="button" (click)="CreateFormdate()" class="btn" tabindex="7">Submit</button>
 
