--- a/src/app/content/pagecontainer/paymentsuccess/paymentsuccess.component.html
+++ b/src/app/content/pagecontainer/paymentsuccess/paymentsuccess.component.html
@@ -6,7 +6,7 @@
                  <div class="container col-md-4">
                     <div class="succes-page">
                       <img src="https://cdn3.iconfinder.com/data/icons/flat-actions-icons-9/792/Tick_Mark_Dark-512.png">
-                      <h3>Recharge Successful</h3>
+                      <h3>{{RechargeSuccessful}}</h3>
                       <span>We are processing the same and you will notified via email</span>
                     </div>  
                     <div class="succes-amount">
@@ -28,7 +28,7 @@
                               <td>Mobile Number </td>    <td class="text-right">{{data.Mobile}} </td>                               
                           </tr> 
                           <tr>
-                              <td>Subject </td>    <td class="text-right">Mobile Recharge </td>                               
+                              <td>Subject </td>    <td class="text-right">{{MobileRecharge}}</td>                               
                           </tr> 
                           <tr>
                               <td>Payment Amount </td>    <td class="text-right">{{data.Amount}}/- </td>                               
